--- a/sgv4/Makefile
+++ b/sgv4/Makefile
@@ -17,12 +17,17 @@ OS_FLAGS = -DSMP_UTILS_LINUX
 LARGE_FILE_FLAGS = -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
 EXTRA_FLAGS = $(OS_FLAGS) $(LARGE_FILE_FLAGS)
 
-# CFLAGS = -I ../include -idirafter ../include/dummy -O2 -Wall -W $(EXTRA_FLAGS)
-CFLAGS = -I ../include -I $(KSRC)/include -idirafter ../include/dummy -g -O2 -Wall -W $(EXTRA_FLAGS)
-# CFLAGS = -I ../include -idirafter ../include/dummy -g -O2 -Wall -W -pedantic -std=c99 $(EXTRA_FLAGS)
+INCLUDES = -I ../include -I $(KSRC)/include -idirafter ../include/dummy
+
+# CFLAGS =  -O2 -Wall -W $(EXTRA_FLAGS)
+CFLAGS = -g -O2 -Wall -W $(EXTRA_FLAGS)
+# CFLAGS = -O2 -Wall -W -pedantic -std=c99 $(EXTRA_FLAGS)
 
 LDFLAGS = 
 # LDFLAGS = -v -lm
+
+.c.o:
+	$(CC) $(INCLUDES) $(CFLAGS) -c -o $@ $<
 
 all: $(EXECS)
 
