--- a/trunk/Makefile.freebsd
+++ b/trunk/Makefile.freebsd
@@ -9,13 +9,15 @@ LD = $(CC)
 EXECS = smp_rep_general smp_rep_manufacturer smp_discover smp_phy_control \
 	smp_rep_phy_err_log smp_rep_phy_sata smp_rep_route_info \
 	smp_read_gpio smp_conf_route_info smp_write_gpio smp_phy_test \
-	smp_discover_list smp_conf_general smp_rep_exp_route_tbl
+	smp_discover_list smp_conf_general smp_rep_exp_route_tbl \
+	smp_rep_phy_event smp_rep_phy_event_list
 
 MAN_PGS = smp_utils.8 smp_rep_general.8 smp_rep_manufacturer.8 \
 	  smp_discover.8 smp_phy_control.8 smp_rep_phy_err_log.8 \
 	  smp_rep_phy_sata.8 smp_rep_route_info.8 smp_read_gpio.8 \
 	  smp_conf_route_info.8 smp_write_gpio.8 smp_phy_test.8 \
-	  smp_discover_list.8 smp_conf_general.8 smp_rep_exp_route_tbl.8
+	  smp_discover_list.8 smp_conf_general.8 smp_rep_exp_route_tbl.8 \
+	  smp_rep_phy_event.8 smp_rep_phy_event_list.8
 MAN_PREF = man8
 
 INCLUDES = -I include
@@ -99,6 +101,12 @@ smp_conf_general: smp_conf_general.o libsmp.a
 	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
 
 smp_rep_exp_route_tbl: smp_rep_exp_route_tbl.o libsmp.a
+	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
+
+smp_rep_phy_event: smp_rep_phy_event.o libsmp.a
+	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
+
+smp_rep_phy_event_list: smp_rep_phy_event_list.o libsmp.a
 	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
 
 install: $(EXECS)
