--- a/Makefile.freebsd
+++ b/Makefile.freebsd
@@ -9,23 +9,25 @@ LD = $(CC)
 EXECS = smp_rep_general smp_rep_manufacturer smp_discover smp_phy_control \
 	smp_rep_phy_err_log smp_rep_phy_sata smp_rep_route_info \
 	smp_read_gpio smp_conf_route_info smp_write_gpio smp_phy_test \
-	smp_discover_list smp_conf_general smp_rep_exp_route_tbl \
-	smp_rep_phy_event smp_rep_phy_event_list smp_zone_lock \
-	smp_ena_dis_zoning smp_zone_unlock smp_zone_activate \
-	smp_conf_zone_phy_info smp_conf_zone_perm_tbl \
+	smp_discover_list smp_conf_general smp_rep_broadcast \
+	smp_rep_exp_route_tbl smp_rep_phy_event smp_rep_phy_event_list \
+	smp_zone_lock smp_ena_dis_zoning smp_zone_unlock \
+	smp_zone_activate smp_conf_zone_phy_info smp_conf_zone_perm_tbl \
 	smp_conf_zone_man_pass smp_zoned_broadcast smp_rep_zone_perm_tbl \
-	smp_rep_zone_man_pass
+        smp_rep_zone_man_pass
 
 MAN_PGS = smp_utils.8 smp_rep_general.8 smp_rep_manufacturer.8 \
 	  smp_discover.8 smp_phy_control.8 smp_rep_phy_err_log.8 \
 	  smp_rep_phy_sata.8 smp_rep_route_info.8 smp_read_gpio.8 \
 	  smp_conf_route_info.8 smp_write_gpio.8 smp_phy_test.8 \
-	  smp_discover_list.8 smp_conf_general.8 smp_rep_exp_route_tbl.8 \
-	  smp_rep_phy_event.8 smp_rep_phy_event_list.8 smp_zone_lock.8 \
-	  smp_ena_dis_zoning.8 smp_zone_unlock.8 smp_zone_activate.8 \
-	  smp_conf_zone_phy_info.8 smp_conf_zone_perm_tbl.8 \
-	  smp_conf_zone_man_pass.8 smp_zoned_broadcast.8 \
-	  smp_rep_zone_perm_tbl.8 smp_rep_zone_man_pass.8
+	  smp_discover_list.8 smp_conf_general.8 smp_rep_broadcast.8 \
+	  smp_rep_exp_route_tbl.8 smp_rep_phy_event.8 \
+	  smp_rep_phy_event_list.8 smp_zone_lock.8 smp_ena_dis_zoning.8 \
+	  smp_zone_unlock.8 smp_zone_activate.8 smp_conf_zone_phy_info.8 \
+	  smp_conf_zone_perm_tbl.8 smp_conf_zone_man_pass.8 \
+	  smp_zoned_broadcast.8 smp_rep_zone_perm_tbl.8 \
+	  smp_rep_zone_man_pass.8
+
 
 MAN_PREF = man8
 
@@ -145,6 +147,9 @@ smp_rep_zone_perm_tbl: smp_rep_zone_perm_tbl.o libsmp.a
 	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
 
 smp_rep_zone_man_pass: smp_rep_zone_man_pass.o libsmp.a
+	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
+
+smp_rep_broadcast: smp_rep_broadcast.o libsmp.a
 	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
 
 install: $(EXECS)
