--- a/Makefile.freebsd
+++ b/Makefile.freebsd
@@ -14,7 +14,7 @@ EXECS = smp_rep_general smp_rep_manufacturer smp_discover smp_phy_control \
 	smp_zone_lock smp_ena_dis_zoning smp_zone_unlock \
 	smp_zone_activate smp_conf_zone_phy_info smp_conf_zone_perm_tbl \
 	smp_conf_zone_man_pass smp_zoned_broadcast smp_rep_zone_perm_tbl \
-        smp_rep_zone_man_pass
+        smp_rep_zone_man_pass smp_rep_self_conf_stat
 
 MAN_PGS = smp_utils.8 smp_rep_general.8 smp_rep_manufacturer.8 \
 	  smp_discover.8 smp_phy_control.8 smp_rep_phy_err_log.8 \
@@ -26,7 +26,7 @@ MAN_PGS = smp_utils.8 smp_rep_general.8 smp_rep_manufacturer.8 \
 	  smp_zone_unlock.8 smp_zone_activate.8 smp_conf_zone_phy_info.8 \
 	  smp_conf_zone_perm_tbl.8 smp_conf_zone_man_pass.8 \
 	  smp_zoned_broadcast.8 smp_rep_zone_perm_tbl.8 \
-	  smp_rep_zone_man_pass.8
+	  smp_rep_zone_man_pass.8 smp_rep_self_conf_stat.8
 
 
 MAN_PREF = man8
@@ -150,6 +150,9 @@ smp_rep_zone_man_pass: smp_rep_zone_man_pass.o libsmp.a
 	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
 
 smp_rep_broadcast: smp_rep_broadcast.o libsmp.a
+	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
+
+smp_rep_self_conf_stat: smp_rep_self_conf_stat.o libsmp.a
 	$(LD) -o $@ $(LDFLAGS) $@.o libsmp.a
 
 install: $(EXECS)
