--- a/trunk/debian/control
+++ b/trunk/debian/control
@@ -10,9 +10,28 @@ Package: smp-utils
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: SAS Expander (SMP) utilities for SAS/SATA disk arrays
- Utilities that send a Serial Attached SCSI (SAS) Management
- Protocol (SMP) request to a SMP target. If the request fails then
+ Utilities that send Serial Attached SCSI (SAS) Serial Management
+ Protocol (SMP) requests to a SMP target. If the request fails then
  the error is decoded. If the request succeeds then the response is
  either decoded, printed out in hexadecimal or output in binary.
- This package supports multiple interfaces since SMP passthroughs
- are not mature. This package supports the Linux 2.6 series.
+ Support for SAS-2 features including phy based zoning.
+
+Package: libsmputils1-1
+Section: libs
+Depends: ${shlibs:Depends}
+Architecture: any
+Conflicts: libsmputils1
+Replaces: libsmputils1
+Suggests: smp-utils
+Description: utilities for SAS SMP control of expanders (shared libraries)
+ Shared library used by the utilities in the smp-utils package.
+
+Package: libsmputils1-dev
+Section: libdevel
+Architecture: any
+Depends: libsmputils1-1 (= ${binary:Version}), ${shlibs:Depends}, ${kfreebsd:Depends}
+Conflicts: libsmputils1-dev
+Suggests: smp-utils
+Description: utilities for SAS SMP control of expanders (developer files)
+ Developer files (i.e. headers and a static library) which are associated with
+ the utilities in the smp-utils package.
