fix minor issues with C++ compilation

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,8 +27,8 @@ bin_PROGRAMS = \
 
 ## endif
 
-# for C++ testing
-## CC = g++ -std=c++11
+# for testing with various compilers
+## CC = gcc
 ## CC = g++
 ## CC = clang
 ## CC = clang++
@@ -36,7 +36,7 @@ bin_PROGRAMS = \
 # -std=<s> can be c99, c11, gnu11, etc. Default is gnu89 (gnu90 is the same)
 AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W
 ## AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W -pedantic -std=c11
-## AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W -pedantic -std=c++11
+## AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W -pedantic -std=c++14
 
 smp_conf_general_SOURCES =	smp_conf_general.c
 smp_conf_general_LDADD = ../lib/libsmputils1.la @os_libs@
