--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -5,8 +5,7 @@ libsmputils1_la_SOURCES = \
 	smp_lib.c \
 	smp_lin_bsg.c \
 	smp_lin_sel.c \
-	smp_mptctl_io.c \
-	smp_aac_io.c
+	smp_mptctl_io.c
 
 EXTRA_libsmputils1_la_SOURCES = \
 	smp_dummy.c
@@ -38,16 +37,9 @@ EXTRA_libsmputils1_la_SOURCES = \
 endif
 
 
-# for testing with various compilers
-## CC = gcc
-## CC = g++
-## CC = clang
-## CC = clang++
 
-# -std=<s> can be c99, c11, gnu11, etc. Default is gnu89 (gnu90 is the same)
 AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W
-## AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W -pedantic -std=c11
-## AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W -pedantic -std=c++14
+# AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W -pedantic -std=c99
 
 lib_LTLIBRARIES = libsmputils1.la
 
