--- a/config.h.in
+++ b/config.h.in
@@ -9,6 +9,9 @@
 /* Define to 1 if you have the <linux/bsg.h> header file. */
 #undef HAVE_LINUX_BSG_H
 
+/* Define to 1 if you have the <linux/kdev_t.h> header file. */
+#undef HAVE_LINUX_KDEV_T_H
+
 /* Define to 1 if you have the <linux/types.h> header file. */
 #undef HAVE_LINUX_TYPES_H
 
@@ -60,14 +63,17 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* smp_utils Build Host */
-#undef SMP_UTILS_BUILD_HOST
+/* smp_utils on android */
+#undef SMP_LIB_ANDROID
 
 /* smp_utils on FreeBSD */
-#undef SMP_UTILS_FREEBSD
+#undef SMP_LIB_FREEBSD
 
-/* assume smp_utils on linux */
-#undef SMP_UTILS_LINUX
+/* smp_utils on linux */
+#undef SMP_LIB_LINUX
+
+/* smp_utils Build Host */
+#undef SMP_UTILS_BUILD_HOST
 
 /* smp_utils on Solaris */
 #undef SMP_UTILS_SOLARIS
@@ -77,3 +83,5 @@
 
 /* Version number of package */
 #undef VERSION
+
+
