--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -127,7 +127,7 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(libdir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
-libsmputils1_la_DEPENDENCIES =
+libsmputils1_la_LIBADD =
 am__libsmputils1_la_SOURCES_DIST = smp_lib.c smp_fre_cam.c \
 	smp_lin_bsg.c smp_lin_sel.c smp_mptctl_io.c smp_aac_io.c \
 	smp_sol_usmp.c
@@ -319,8 +319,6 @@ localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
-os_deps = @os_deps@
-os_libs = @os_libs@
 pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
@@ -362,10 +360,10 @@ top_srcdir = @top_srcdir@
 # for testing with various compilers
 
 # -std=<s> can be c99, c11, gnu11, etc. Default is gnu89 (gnu90 is the same)
-AM_CFLAGS = -I ../include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wall -W
+AM_CPPFLAGS = -iquote ${top_srcdir}/include -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
+AM_CFLAGS = -Wall -W
 lib_LTLIBRARIES = libsmputils1.la
 libsmputils1_la_LDFLAGS = -version-info 1:0:0
-libsmputils1_la_LIBADD = @os_libs@
 all: all-am
 
 .SUFFIXES:
@@ -692,3 +690,5 @@ uninstall-am: uninstall-libLTLIBRARIES
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
+
+
